feat: update cv

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
 
          <section class="section" id="courses">
-        <h2 class="section-title-right">Courses</h2>
+        <h2 class="section-title-right">Education\Courses</h2>
         <ul>
             <li>CS50 (Basic computer science course)</li>
             <li>RS School JavaScript/Front-end course (stage#0) - in process</li>
